Fix theme style bleed

--- a/packages/edit-widgets/src/style.scss
+++ b/packages/edit-widgets/src/style.scss
@@ -60,6 +60,15 @@ body.widgets-php {
 	.components-panel__body-title.components-panel__body-title.components-panel__body-title:hover {
 		background-color: $white;
 	}
+	// Override for Twenty Twenty theme styles.
+	.components-panel__body-title.components-panel__body-title {
+		margin: 0;
+
+		// Override for Twenty Nineteen theme styles.
+		&::before {
+			content: none;
+		}
+	}
 	// Remove unwanted styles from .editor-styles-wrapper in the widget area.
 	.wp-block-widget-area.editor-styles-wrapper {
 		padding: 0;
