--- a/packages/widgets/src/blocks/legacy-widget/editor.scss
+++ b/packages/widgets/src/blocks/legacy-widget/editor.scss
@@ -99,5 +99,6 @@
 .wp-block-legacy-widget {
 	.components-select-control__input {
 		padding: 0;
+		font-family: system-ui;
 	}
 }
